SERVER-69836: mongos doesn't raise validation errors when database does not exist